5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1638_652.log
== TEST (2019-05-08 08:42:38) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
print(b)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:43:39) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = %b
-- ERROR:
File "XXXX", line 4
    c = %b
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:44:08) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = b%10
print(c)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:44:28) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = a%10
print(c)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:45:32) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = a%100
print(c)
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:46:12) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = a%100
print(c)
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:49:02) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = a%100

if(a/c)%==0:
	print("SIM")
else:
	print("NAO")
-- ERROR:
File "XXXX", line 6
    if(a/c)%==0:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:49:21) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = a%100

if(a/c)%0:
	print("SIM")
else:
	print("NAO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(a/c)%0:
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:50:53) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = a%100

x = (a%c)

if x==0:
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 08:51:01) 
-- CODE:
a= int(input("insira um numero de 3 dgts: "))

b = a//100
c = a%100

x = (a%c)

if x==0:
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.14908
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
